[gd_scene load_steps=4 format=3 uid="uid://cbhcxwnfn5kvw"]

[ext_resource type="Script" path="res://Scenes/PlayerCreator/player_creator.gd" id="1_cn44b"]
[ext_resource type="PackedScene" uid="uid://cw34kii6l1jgt" path="res://Managers/Scenes/DataManager.tscn" id="2_3oto1"]
[ext_resource type="Theme" uid="uid://da5n74cj02n0c" path="res://Theme/Game_Theme.tres" id="2_n05k1"]

[node name="player_creator" type="Node2D" node_paths=PackedStringArray("humor_negro_selector", "humor_blanco_selector", "humor_verde_selector", "humor_absurdo_selector", "humor_inteligente_selector", "memes_selector", "continue_button", "reminder")]
script = ExtResource("1_cn44b")
humor_negro_selector = NodePath("Control/Explicacion/HumorNegro/HumorNegroSelector")
humor_blanco_selector = NodePath("Control/Explicacion/HumorBlanco/HumorBlancoSelector")
humor_verde_selector = NodePath("Control/Explicacion/HumorVerde/HumorVerdeSelector")
humor_absurdo_selector = NodePath("Control/Explicacion/HumorAbsurdo/HumorAbsurdoSelector")
humor_inteligente_selector = NodePath("Control/Explicacion/HumorInteligente/HumorInteligenteSelector")
memes_selector = NodePath("Control/Explicacion/Memes/MemesSelector")
continue_button = NodePath("Control/Explicacion/Continue_Button")
reminder = NodePath("Control/Explicacion/Reminder")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_n05k1")

[node name="Background" type="Panel" parent="Control"]
modulate = Color(0.517647, 0.517647, 0.517647, 1)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_type_variation = &"Panel_BG_Filled"

[node name="Explicacion" type="Panel" parent="Control"]
layout_mode = 0
offset_top = -233.0
offset_right = 1980.0
offset_bottom = 1582.0
theme_type_variation = &"Panel_Textos"

[node name="Rules" type="Label" parent="Control/Explicacion"]
layout_mode = 0
offset_left = 297.0
offset_top = 367.0
offset_right = 3029.0
offset_bottom = 706.0
text = "                                                Tienes que seleccionar:

1 Humor que te parta                                         2 Humores que ni fú ni fá
2 Humores que te parezcan graciosos           1 Humor que ni puta gracia"

[node name="Reminder" type="Label" parent="Control/Explicacion"]
layout_mode = 0
offset_left = 445.0
offset_top = 667.0
offset_right = 1540.0
offset_bottom = 725.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "¡Ahora mismo no estás cumpliendo los límites! ¡Revísalos!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HumorNegro" type="Label" parent="Control/Explicacion"]
layout_mode = 0
offset_left = 267.0
offset_top = 777.0
offset_right = 528.0
offset_bottom = 835.0
text = "Humor Negro"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HumorNegroSelector" type="OptionButton" parent="Control/Explicacion/HumorNegro"]
layout_mode = 0
offset_left = 348.0
offset_top = 3.0
offset_right = 517.0
offset_bottom = 59.0

[node name="HumorVerde" type="Label" parent="Control/Explicacion"]
layout_mode = 0
offset_left = 262.0
offset_top = 901.0
offset_right = 519.0
offset_bottom = 959.0
text = "Humor Verde"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HumorVerdeSelector" type="OptionButton" parent="Control/Explicacion/HumorVerde"]
layout_mode = 0
offset_left = 355.0
offset_top = 3.0
offset_right = 524.0
offset_bottom = 59.0

[node name="HumorAbsurdo" type="Label" parent="Control/Explicacion"]
layout_mode = 0
offset_left = 261.0
offset_top = 1020.0
offset_right = 566.0
offset_bottom = 1078.0
text = "Humor Absurdo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HumorAbsurdoSelector" type="OptionButton" parent="Control/Explicacion/HumorAbsurdo"]
layout_mode = 0
offset_left = 356.0
offset_top = 3.0
offset_right = 525.0
offset_bottom = 59.0

[node name="HumorBlanco" type="Label" parent="Control/Explicacion"]
layout_mode = 0
offset_left = 1023.0
offset_top = 784.0
offset_right = 1296.0
offset_bottom = 842.0
text = "Humor Blanco"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HumorBlancoSelector" type="OptionButton" parent="Control/Explicacion/HumorBlanco"]
layout_mode = 0
offset_left = 380.0
offset_top = -5.0
offset_right = 549.0
offset_bottom = 51.0

[node name="HumorInteligente" type="Label" parent="Control/Explicacion"]
layout_mode = 0
offset_left = 1029.0
offset_top = 910.0
offset_right = 1380.0
offset_bottom = 968.0
text = "Humor Inteligente"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HumorInteligenteSelector" type="OptionButton" parent="Control/Explicacion/HumorInteligente"]
layout_mode = 0
offset_left = 377.0
offset_top = -5.0
offset_right = 546.0
offset_bottom = 51.0

[node name="Memes" type="Label" parent="Control/Explicacion"]
layout_mode = 0
offset_left = 1020.0
offset_top = 1029.0
offset_right = 1176.0
offset_bottom = 1087.0
text = "Memes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MemesSelector" type="OptionButton" parent="Control/Explicacion/Memes"]
layout_mode = 0
offset_left = 387.0
offset_top = -5.0
offset_right = 556.0
offset_bottom = 51.0

[node name="Continue_Button" type="Button" parent="Control/Explicacion"]
layout_mode = 0
offset_left = 1991.0
offset_top = 1215.0
offset_right = 2691.0
offset_bottom = 1315.0
rotation = -3.14159
theme_type_variation = &"Boton_Horizontal"
disabled = true

[node name="Label" type="Label" parent="Control/Explicacion/Continue_Button"]
layout_mode = 0
offset_left = 562.0
offset_top = 83.0
offset_right = 757.0
offset_bottom = 141.0
rotation = 3.14159
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Confirmar"

[node name="DataManager" parent="Control" instance=ExtResource("2_3oto1")]

[connection signal="item_selected" from="Control/Explicacion/HumorNegro/HumorNegroSelector" to="." method="_on_humor_negro_selector_item_selected"]
[connection signal="item_selected" from="Control/Explicacion/HumorVerde/HumorVerdeSelector" to="." method="_on_humor_verde_selector_item_selected"]
[connection signal="item_selected" from="Control/Explicacion/HumorAbsurdo/HumorAbsurdoSelector" to="." method="_on_humor_absurdo_selector_item_selected"]
[connection signal="item_selected" from="Control/Explicacion/HumorBlanco/HumorBlancoSelector" to="." method="_on_humor_blanco_selector_item_selected"]
[connection signal="item_selected" from="Control/Explicacion/HumorInteligente/HumorInteligenteSelector" to="." method="_on_humor_inteligente_selector_item_selected"]
[connection signal="item_selected" from="Control/Explicacion/Memes/MemesSelector" to="." method="_on_memes_selector_item_selected"]
[connection signal="pressed" from="Control/Explicacion/Continue_Button" to="." method="_on_continue_button_pressed"]
